[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }

fastcrypto = "0.1.4"
anyhow = "1.0.64"
bcs = "0.1.4"
async-trait = "0.1.57"
tokio = "1.20.1"
futures = "0.3.23"
dirs = "4.0.0"
rand = "0.8.5"