[package]
name = "user_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }

anyhow = "1.0.64"
async-trait = "0.1.61"
tokio = "1.20.1"
futures = "0.3.23"
dirs = "4.0.0"
